--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://35.223.168.209:3306/incentive
-spring.datasource.username=incentive-management
+spring.datasource.url=jdbc:mysql://35.222.99.141:3306/incentive
+spring.datasource.username=group
 spring.datasource.password=admin123123
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
