--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.7.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
